[gd_scene load_steps=14 format=3 uid="uid://07w8hopuanew"]

[ext_resource type="Script" path="res://Buildings/Mines/GeodeMine.gd" id="1_q6pjh"]
[ext_resource type="PackedScene" uid="uid://dp3jcfr5wtglr" path="res://Penguins/MinePenguin.tscn" id="2_4aapj"]
[ext_resource type="PackedScene" uid="uid://cf7lio26bkaw7" path="res://Buildings/Mines/GeodeMineT2.tscn" id="2_xvhoj"]
[ext_resource type="PackedScene" uid="uid://cy3lmb4agy3pw" path="res://UI/Coins/PencoinGainAnim.tscn" id="4_35ss2"]
[ext_resource type="PackedScene" uid="uid://bytcpraxm8dp4" path="res://Buildings/BuildingInside.tscn" id="4_3264e"]
[ext_resource type="PackedScene" uid="uid://b4uwyfasv0oev" path="res://UI/WarningSymbol.tscn" id="4_kmg1a"]
[ext_resource type="Texture2D" uid="uid://8ut00sxgyatg" path="res://Buildings/Mines/Images/PH_IcebergMine.png" id="4_tvdih"]
[ext_resource type="PackedScene" uid="uid://5ie5maptxhem" path="res://UI/Coins/PengoldGainAnim.tscn" id="5_bpsov"]
[ext_resource type="Texture2D" uid="uid://brorrggtqtcsl" path="res://Buildings/Mines/Images/PH_IcebergMine_outline.png" id="5_w2qcw"]
[ext_resource type="PackedScene" uid="uid://xx51ktriaj5h" path="res://UI/CountSlider.tscn" id="7_3uhrp"]
[ext_resource type="Texture2D" uid="uid://1wef1nnkonx5" path="res://Buildings/Mines/Images/MineBottom.png" id="8_w3mpw"]
[ext_resource type="PackedScene" uid="uid://bjo6wb5vplnv1" path="res://Buildings/Mines/mine_upgrades.tscn" id="9_u5neu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jofef"]
size = Vector2(110, 95)

[node name="GeodeMine" type="Node2D" node_paths=PackedStringArray("penguin_parent", "penguin_spawn_point", "deposit_point", "withdraw_point") groups=["Persist"]]
script = ExtResource("1_q6pjh")
next_tier = ExtResource("2_xvhoj")
penguin_scene = ExtResource("2_4aapj")
penguin_parent = NodePath(".")
penguin_spawn_point = NodePath("Inside/MineBottom")
anim_offset = Vector2(0, -150)
coin_anim = ExtResource("4_35ss2")
gold_anim = ExtResource("5_bpsov")
deposit_point = NodePath("Inside/MineBottom")
withdraw_point = NodePath(".")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 20
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_tvdih")
offset = Vector2(-9.675, -171.165)

[node name="Area2D" type="Area2D" parent="Sprite2D"]
position = Vector2(0, 148.16)
scale = Vector2(4, 4)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(0, -78.04)
shape = SubResource("RectangleShape2D_jofef")

[node name="Outline" type="Sprite2D" parent="Sprite2D"]
z_index = -1
texture = ExtResource("5_w2qcw")
offset = Vector2(-9.675, -171.165)

[node name="CountSlider" parent="." instance=ExtResource("7_3uhrp")]
offset_left = -50.0
offset_top = -128.0
offset_right = 50.0
offset_bottom = -118.0
value = 21.0
fill_mode = 0

[node name="WarningSymbol" parent="CountSlider" instance=ExtResource("4_kmg1a")]
layout_mode = 1
offset_left = 39.0
offset_top = -11.0
offset_right = 69.0
offset_bottom = 19.0
scale = Vector2(0.75, 0.75)

[node name="Inside" parent="." instance=ExtResource("4_3264e")]

[node name="MineBottom" type="Sprite2D" parent="Inside"]
self_modulate = Color(0.521569, 0.521569, 0.521569, 1)
z_index = -5
position = Vector2(0, 86)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_w3mpw")
offset = Vector2(-9.555, -146.42)

[node name="UpgradeUI" parent="." instance=ExtResource("9_u5neu")]

[node name="Sidebar" parent="UpgradeUI/Sign" index="2"]
offset_bottom = 285.0

[node name="MineTier" parent="UpgradeUI/Sign/Sidebar/UpgradeTier" index="2"]
level = 2
base = 15.0

[node name="MaxDepth" parent="UpgradeUI/Sign/Sidebar" index="3"]
visible = false

[node name="BucketSpeed" parent="UpgradeUI/Sign/Sidebar" index="4"]
visible = false

[connection signal="on_focus" from="." to="Sprite2D/Outline" method="show" unbinds=1]
[connection signal="on_focus" from="." to="UpgradeUI" method="show" unbinds=1]
[connection signal="on_unfocus" from="." to="Sprite2D/Outline" method="hide" unbinds=1]
[connection signal="on_unfocus" from="." to="UpgradeUI" method="hide" unbinds=1]
[connection signal="storage_changed" from="." to="CountSlider" method="_set_fill"]
[connection signal="storage_emptied" from="." to="CountSlider/WarningSymbol" method="hide" unbinds=1]
[connection signal="storage_filled" from="." to="CountSlider/WarningSymbol" method="show" unbinds=1]
[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="on_upgrade_mine_storage" from="UpgradeUI" to="." method="on_upgrade_max_storage"]
[connection signal="on_upgrade_peng_count" from="UpgradeUI" to="." method="on_upgrade_peng_count"]
[connection signal="on_upgrade_tier" from="UpgradeUI" to="." method="on_upgrade_building_tier"]

[editable path="UpgradeUI"]
[editable path="UpgradeUI/Sign/Sidebar/UpgradeTier"]
[editable path="UpgradeUI/Sign/Sidebar/MineStorage"]
[editable path="UpgradeUI/Sign/Sidebar/MaxDepth"]
[editable path="UpgradeUI/Sign/Sidebar/BucketSpeed"]
[editable path="UpgradeUI/Sign/Sidebar/PengCount"]
[editable path="UpgradeUI/Sign/Sidebar/PengSpeed"]
[editable path="UpgradeUI/Sign/Sidebar/PengCarry"]
[editable path="UpgradeUI/Sign/Sidebar/PengMineStrength"]
